[package]
name = "pali"
version = "0.1.0"
authors = ["Morgan Arnold <morgan.arnold@proton.me>"]
edition = "2021"
description = "An assembler for the ilo ISA."
repository = "https://codeberg.org/mra/pali"
license = "Unlicense"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
strum = { version = "0.26.3", features = ["derive"] }
unicode-ident = "1.0.13"

[lints.clippy]
upper_case_acronyms = "allow"
