[package]
name = "sama"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "an emulator for the lawa isa"
repository.workspace = true
license.workspace = true

[dependencies]
crossbeam = "0.8.4"
directories = "5.0.1"
mlua = { version = "0.9.9", features = ["luajit"] }
ratatui = { version = "0.28.1", features = ["unstable-widget-ref"] }
tui-textarea = "0.6.1"
